feat(index): add wrapper block

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body class="page">
   <div class="page__wrapper">
 
-    <header class="header">
+    <header class="header page__header wrapper">
       <img class="header__logo" src="./images/logo.svg" alt="Логотип сайта Mesto Russia">
     </header>
 
-    <main class="content page__content">
+    <main class="content page__content wrapper">
 
       <section class="profile">
 
@@ -92,7 +92,7 @@
 
     </main>
 
-    <footer class="footer">
+    <footer class="footer page__footer wrapper">
       <a href="https://glukosalex.ru" class="footer__copyrigth" target="_blank">© 2023. Глушенков&nbsp;Константин</a>
     </footer>
 
