refactor(element): change article to figure

--- a/index.html
+++ b/index.html
@@ -37,63 +37,87 @@
         <ul class="elements__list">
 
           <li class="elements__item">
-            <article class="element">
-              <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="Фото старинной каменной постройки в горах" class="element__image">
-              <h2 class="element__title">Карачаевск</h2>
-              <label class="element__like">
-                <input type="checkbox" class="element__like-btn">
-              </label>
-            </article>
+            <figure class="element">
+              <picture class="element__image-wrapper">
+                <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="Фото старинной каменной постройки в горах" class="element__image">
+              </picture>
+              <figcaption class="element__caption">
+                <h2 class="element__title">Карачаевск</h2>
+                <label class="element__like">
+                  <input type="checkbox" class="element__like-btn">
+                </label>
+              </figcaption>
+            </figure>
           </li>
 
           <li class="elements__item">
-            <article class="element">
-              <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="Фото пейзажа с горой Эльбрус вдали на закате" class="element__image">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <label class="element__like">
-                <input type="checkbox" class="element__like-btn">
-              </label>
-            </article>
+            <figure class="element">
+              <picture class="element__image-wrapper">
+                <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="Фото пейзажа с горой Эльбрус вдали на закате" class="element__image">
+              </picture>
+              <figcaption class="element__caption">
+                <h2 class="element__title">Гора Эльбрус</h2>
+                <label class="element__like">
+                  <input type="checkbox" class="element__like-btn">
+                </label>
+              </figcaption>
+            </figure>
           </li>
 
           <li class="elements__item">
-            <article class="element">
-              <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="Фото заснеженных гор и леса" class="element__image">
-              <h2 class="element__title">Домбай</h2>
-              <label class="element__like">
-                <input type="checkbox" class="element__like-btn">
-              </label>
-            </article>
+            <figure class="element">
+              <picture class="element__image-wrapper">
+                <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="Фото заснеженных гор и леса" class="element__image">
+              </picture>
+              <figcaption class="element__caption">
+                <h2 class="element__title">Домбай</h2>
+                <label class="element__like">
+                  <input type="checkbox" class="element__like-btn">
+                </label>
+              </figcaption>
+            </figure>
           </li>
 
           <li class="elements__item">
-            <article class="element">
-              <img src="images/gleb-lucky-7SF0nk9ddbY-unsplash.jpg" alt="Фото стоящего на скале человека спиной к зрителю на фоне горы Эльбрус" class="element__image">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <label class="element__like">
-                <input type="checkbox" class="element__like-btn">
-              </label>
-            </article>
+            <figure class="element">
+              <picture class="element__image-wrapper">
+                <img src="images/gleb-lucky-7SF0nk9ddbY-unsplash.jpg" alt="Фото стоящего на скале человека спиной к зрителю на фоне горы Эльбрус" class="element__image">
+              </picture>
+              <figcaption class="element__caption">
+                <h2 class="element__title">Гора Эльбрус</h2>
+                <label class="element__like">
+                  <input type="checkbox" class="element__like-btn">
+                </label>
+              </figcaption>
+            </figure>
           </li>
 
           <li class="elements__item">
-            <article class="element">
-              <img src="images/evgeny-ndn-L1sJAaT4b78-unsplash.jpg" alt="Фото заснеженных гор" class="element__image">
-              <h2 class="element__title">Домбай</h2>
-              <label class="element__like">
-                <input type="checkbox" class="element__like-btn">
-              </label>
-            </article>
+            <figure class="element">
+              <picture class="element__image-wrapper">
+                <img src="images/evgeny-ndn-L1sJAaT4b78-unsplash.jpg" alt="Фото заснеженных гор" class="element__image">
+              </picture>
+              <figcaption class="element__caption">
+                <h2 class="element__title">Домбай</h2>
+                <label class="element__like">
+                  <input type="checkbox" class="element__like-btn">
+                </label>
+              </figcaption>
+            </figure>
           </li>
 
           <li class="elements__item">
-            <article class="element">
-              <img src="images/dmitry-tur-5sPYYR6lG28-unsplash.jpg" alt="Фото церкви в горах" class="element__image">
-              <h2 class="element__title">Карачаево-Черкесия</h2>
-              <label class="element__like">
-                <input type="checkbox" class="element__like-btn">
-              </label>
-            </article>
+            <figure class="element">
+              <picture class="element__image-wrapper">
+                <img src="images/dmitry-tur-5sPYYR6lG28-unsplash.jpg" alt="Фото церкви в горах" class="element__image">
+              </picture>
+              <figcaption class="element__caption">
+                <h2 class="element__title">Карачаево-Черкесия</h2>
+                <label class="element__like">
+                  <input type="checkbox" class="element__like-btn">
+                </label>
+              </figcaption>
+            </figure>
           </li>
 
         </ul>
