feat: header and profile stylization

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <figcaption class="profile__info">
             <h1 class="profile__username">Жак-Ив Кусто</h1>
             <p class="profile__desc">Исследователь океана</p>
-            <button class="profile__edit">Редактировать профиль</button>
+            <button type="button" class="profile__edit">Редактировать профиль</button>
           </figcaption>
         </figure>
 
-        <button class="profile__add-btn">Добавить пост</button>
+        <button type="button" class="profile__add-btn">Добавить пост</button>
 
       </section>
 
