feat(index): page stylization for mobile

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </main>
 
     <footer class="footer page__footer wrapper">
-      <a href="https://glukosalex.ru" class="footer__copyrigth" target="_blank">© 2023. Глушенков&nbsp;Константин</a>
+      <a href="https://glukosalex.ru" class="footer__copyright" target="_blank">© 2023. Глушенков&nbsp;Константин</a>
     </footer>
 
   </div>
