feat(index): add modal

--- a/index.html
+++ b/index.html
@@ -124,6 +124,17 @@
 
       </section>
 
+      <section class="modal modal_show">
+        <form class="modal__content form" action="" method="post">
+          <fieldset class="form__wrapper">
+            <legend class="form__title">Редактировать профиль</legend>
+            <input class="form__text-input" type="text" name="username" value="Жак-Ив Кусто">
+            <input class="form__text-input" type="text" name="desc" value="Исследователь океана">
+            <input class="form__button" type="submit" value="Сохранить">
+          </fieldset>
+        </form>
+      </section>
+
     </main>
 
     <footer class="footer page__footer wrapper">
