--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 
       </section>
 
-      <section class="modal modal_show">
+      <section class="modal">
         <div class="modal__content">
           <form class="form" action="" method="post">
             <fieldset class="form__wrapper">
               <legend class="form__title">Редактировать профиль</legend>
-              <input class="form__text-input" type="text" name="username" value="Жак-Ив Кусто">
-              <input class="form__text-input" type="text" name="desc" value="Исследователь океана">
+              <input class="form__text-input" type="text" name="username" value="" required>
+              <input class="form__text-input" type="text" name="desc" value="" required>
               <input class="form__button" type="submit" value="Сохранить">
             </fieldset>
           </form>
