refactor(info): change position binding info edit button to username

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             <img src="./images/Avatar@1x.jpg" srcset="./images/Avatar@2x.jpg 2x" alt="Фотография пользователя">
           </picture>
           <figcaption class="profile__info">
-            <h1 class="profile__username">Жак-Ив Кусто</h1>
+            <div class="profile__name-wrap">
+              <h1 class="profile__username">Жак-Ив Кусто</h1>
+              <button type="button" class="profile__edit">Редактировать профиль</button>
+            </div>
             <p class="profile__desc">Исследователь океана</p>
-            <button type="button" class="profile__edit">Редактировать профиль</button>
           </figcaption>
         </figure>
 
