fix(form): form action not empty

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <section class="modal">
         <div class="modal__content">
-          <form class="form" action="" method="post">
+          <form class="form" action="#" method="post">
             <fieldset class="form__wrapper">
               <legend class="form__title">Редактировать профиль</legend>
               <input class="form__text-input" type="text" name="username" value="" required>
