feat(index): add popup smooth opening

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <figcaption class="modal__image-title">Карачаево-Черкесия</figcaption>
           </figure>
           <button type="button" class="modal__close"></button>
-        </d>
+        </div>
       </div>
 
       <template id="element-template">
