feat(index): add initial cards render with like and delete functions

--- a/index.html
+++ b/index.html
@@ -33,58 +33,7 @@
 
       <section>
 
-        <ul class="elements">
-
-          <!--<li class="element">
-            <img src="images/kirill-pershin-1088404-unsplash.jpg" alt="Старинная каменная постройка в горах" class="element__image">
-            <div class="element__caption">
-              <h2 class="element__title">Карачаевск</h2>
-              <button type="button" class="element__like element__like_active" aria-label="Отметить как понравившееся"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img src="images/kirill-pershin-1404681-unsplash.jpg" alt="Пейзаж с горой Эльбрус вдали на закате" class="element__image">
-            <div class="element__caption">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button type="button" class="element__like" aria-label="Отметить как понравившееся"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img src="images/kirill-pershin-1556355-unsplash.jpg" alt="Заснеженные горы и лес" class="element__image">
-            <div class="element__caption">
-              <h2 class="element__title">Домбай</h2>
-              <button type="button" class="element__like" aria-label="Отметить как понравившееся"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img src="images/gleb-lucky-7SF0nk9ddbY-unsplash.jpg" alt="Стоящий на скале человека спиной к зрителю на фоне горы Эльбрус" class="element__image">
-            <div class="element__caption">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button type="button" class="element__like" aria-label="Отметить как понравившееся"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img src="images/evgeny-ndn-L1sJAaT4b78-unsplash.jpg" alt="Заснеженные горы" class="element__image">
-            <div class="element__caption">
-              <h2 class="element__title">Домбай</h2>
-              <button type="button" class="element__like" aria-label="Отметить как понравившееся"></button>
-            </div>
-          </li>
-
-          <li class="element">
-            <img src="images/dmitry-tur-5sPYYR6lG28-unsplash.jpg" alt="Церковь в горах" class="element__image">
-            <div class="element__caption">
-              <h2 class="element__title">Карачаево-Черкесия</h2>
-              <button type="button" class="element__like" aria-label="Отметить как понравившееся"></button>
-            </div>
-            <button type="button" class="element__delete" aria-label="Удалить пост"></button>
-          </li>-->
-
-        </ul>
+        <ul class="elements"></ul>
 
       </section>
 
