feat(index): add the rest functionality

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <div class="modal modal_type_card-add">
         <div class="modal__content modal__content_type_form">
           <h2 class="modal__title">Новое место</h2>
-          <form class="form" action="#" name="profile-edit-form" method="post">
+          <form class="form" action="#" name="card-add-form" method="post">
             <input class="form__text-input form__text-input_data_img-title" type="text" name="img-title" placeholder="Название" required>
-            <input class="form__text-input form__text-input_data_img-url" type="text" name="img-url" placeholder="Ссылка на картинку" required>
+            <input class="form__text-input form__text-input_data_img-url" type="url" name="img-url" placeholder="Ссылка на картинку" required>
             <button class="form__button" type="submit">Создать</button>
           </form>
           <button type="button" class="modal__close"></button>
