fix(index): replace modal image alt with card image's alt

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <div class="modal modal_type_image">
         <div class="modal__content modal__content_type_image">
           <figure class="modal__image-wrap">
-            <img src="images/dmitry-tur-5sPYYR6lG28-unsplash.jpg" alt="Церковь в горах" class="modal__image">
-            <figcaption class="modal__image-title">Карачаево-Черкесия</figcaption>
+            <img src="#" alt="" class="modal__image">
+            <figcaption class="modal__image-title"></figcaption>
           </figure>
           <button type="button" class="modal__close"></button>
         </div>
