--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
         <div class="modal__content modal__content_type_form">
           <h2 class="modal__title">Редактировать профиль</h2>
           <form class="form" action="#" name="profile-edit-form" method="post">
-            <input class="form__text-input form__text-input_data_username" type="text" name="username" required>
-            <input class="form__text-input form__text-input_data_about" type="text" name="about" required>
+            <input id="username" class="form__text-input form__text-input_data_username" type="text" name="username" minlength="2" maxlength="40" placeholder="Имя" required>
+            <span class="form__input-error username-error"></span>
+            <input id="about" class="form__text-input form__text-input_data_about" type="text" name="about" minlength="2" maxlength="200" placeholder="О себе" required>
+            <span class="form__input-error about-error"></span>
             <button class="form__button" type="submit">Сохранить</button>
           </form>
           <button type="button" class="modal__close"></button>
@@ -59,8 +61,10 @@
         <div class="modal__content modal__content_type_form">
           <h2 class="modal__title">Новое место</h2>
           <form class="form" action="#" name="card-add-form" method="post">
-            <input class="form__text-input form__text-input_data_img-title" type="text" name="img-title" placeholder="Название" required>
-            <input class="form__text-input form__text-input_data_img-url" type="url" name="img-url" placeholder="Ссылка на картинку" required>
+            <input id="img-title" class="form__text-input form__text-input_data_img-title" type="text" name="img-title" placeholder="Название" minlength="2" maxlength="30" required>
+            <span class="form__input-error img-title-error"></span>
+            <input id="img-url" class="form__text-input form__text-input_data_img-url" type="url" name="img-url" placeholder="Ссылка на картинку" required>
+            <span class="form__input-error img-url-error"></span>
             <button class="form__button" type="submit">Создать</button>
           </form>
           <button type="button" class="modal__close"></button>
