fix(index): review-1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Место</title>
   <link href="./pages/index.css" rel="stylesheet">
+  <script src="./script/constants.js" defer></script>
+  <script src="./script/index.js" defer></script>
+  <script src="./script/validate.js" defer></script>
 </head>
 <body class="page">
   <div class="page__wrapper">
@@ -93,10 +96,5 @@
       </template>
 
   </div>
-
-  <script src="./script/constants.js"></script>
-  <script src="./script/index.js"></script>
-  <script src="./script/validate.js"></script>
-
 </body>
 </html>
